@@ -3,11 +3,14 @@ package ru.stepagin.dockins.core.project.entity;
 import jakarta.persistence.*;
 import lombok.*;
 import org.hibernate.annotations.GenericGenerator;
+import ru.stepagin.dockins.core.DomainErrorCodes;
+import ru.stepagin.dockins.core.project.exception.ProjectConstraintViolationException;
 import ru.stepagin.dockins.core.user.entity.AccountEntity;
 
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Entity
 @Getter
@@ -30,7 +33,7 @@ public class ProjectInfoEntity {
     @GenericGenerator(name = "uuid2", strategy = "uuid2")
     private UUID id;
 
-    @Column(nullable = false, unique = true)
+    @Column(nullable = false)
     private String projectName;
 
     @ManyToOne
@@ -53,7 +56,12 @@ public class ProjectInfoEntity {
     @Builder.Default
     private boolean isPrivate = false;
 
-    @Transient
+    @ManyToMany(fetch = FetchType.LAZY)
+    @JoinTable(
+            name = "project_tag", // имя промежуточной таблицы
+            joinColumns = @JoinColumn(name = "project_id"),  // колонка, которая ссылается на ProjectInfoEntity
+            inverseJoinColumns = @JoinColumn(name = "tag_id") // колонка, которая ссылается на TagEntity
+    )
     private List<TagEntity> tags;
 
     @Version
@@ -69,10 +77,29 @@ public class ProjectInfoEntity {
         setDeletedOn(java.time.LocalDateTime.now());
     }
 
+    // Метод для получения строковых представлений тегов
     @Transient
     public List<String> getTagsAsString() {
+        if (tags == null) {
+            return List.of();
+        }
         return this.tags.stream()
                 .map(TagEntity::getName)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    public void goodFieldsOrThrow() {
+        if (projectName.length() < 5)
+            throw new ProjectConstraintViolationException("Название проекта должно быть от 5 до 50 символов.", DomainErrorCodes.PROJECT_NAME_IS_TOO_SHORT);
+        if (projectName.length() > 50)
+            throw new ProjectConstraintViolationException("Название проекта должно быть от 5 до 50 символов.", DomainErrorCodes.PROJECT_NAME_IS_TOO_LONG);
+
+        if (!projectName.matches("^[a-zA-Z].*$"))
+            throw new ProjectConstraintViolationException("Название проекта должно начинаться с латинской буквы.", DomainErrorCodes.PROJECT_NAME_STARTS_WITH_BAD_SYMBOL);
+        if (!projectName.matches("^.*[a-zA-Z0-9]$"))
+            throw new ProjectConstraintViolationException("Название проекта должно заканчиваться на латинскую букву или цифру.", DomainErrorCodes.PROJECT_NAME_ENDS_WITH_BAD_SYMBOL);
+        if (!projectName.matches("^[a-zA-Z][a-zA-Z0-9-]*[a-zA-Z0-9]$"))
+            throw new ProjectConstraintViolationException("Название проекта может содержать только латинские буквы, цифры и знак дефис.", DomainErrorCodes.PROJECT_NAME_CONTAINS_BAD_SYMBOL);
+
     }
 }
